# tucan_ros2

./: .gitignore  .gitmodules  README.md
drivers/driver_camera/: CMakeLists.txt  package.xml  setup.cfg  setup.py
drivers/driver_camera/driver_camera/: camera_driver_node.py
drivers/driver_camera/src/: driver_camera.cpp
drivers/driver_gripper/: CMakeLists.txt  package.xml  setup.cfg  setup.py
drivers/driver_gripper/driver_gripper/: driver_gripper.py  gripper_driver_node.py
flight_modes/mode_arm/: package.xml  setup.cfg  setup.py
flight_modes/mode_arm/mode_arm/: mode_arm.py
flight_modes/mode_hover/: package.xml  setup.cfg  setup.py
flight_modes/mode_hover/mode_hover/: mode_hover.py
flight_modes/mode_idle/: package.xml  setup.cfg  setup.py
flight_modes/mode_idle/mode_idle/: mode_idle.py
flight_modes/mode_line_follower/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_line_follower/include/: mode_line_follower.hpp
flight_modes/mode_line_follower/src/: mode_line_follower.cpp
flight_modes/mode_pass_transparent_window/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_pass_transparent_window/mode_pass_transparent_window/: mode_transparent_window_node.py
flight_modes/mode_pickup_sample/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_pickup_sample/mode_pickup_sample/: mode_pickup_sample.py  mode_pickup_sample_node.py
flight_modes/mode_place_sample/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_place_sample/mode_place_sample/: mode_place_sample_node.py
flight_modes/mode_precision_landing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_precision_landing/mode_precision_landing/: mode_precision_landing.py  mode_precision_landing_node.py
flight_modes/mode_takeoff/: CMakeLists.txt  package.xml
flight_modes/mode_takeoff/include/: mode_takeoff.hpp
flight_modes/mode_takeoff/src/: mode_takeoff.cpp
flight_modes/mode_vertical_gate/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_vertical_gate/mode_vertical_gate/: mode_vertical_gate.py  mode_vertical_gate_node.py
flight_modes/mode_wildlife_photographer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flight_modes/mode_wildlife_photographer/mode_wildlife_photographer/: mode_wildlife_photographer.py  mode_wildlife_photographer_node.py
flight_modes/tucan_msgs/: CMakeLists.txt  README.md  package.xml
flight_modes/tucan_msgs/msg/: Mode.msg  ModeStatus.msg
gripper_control/: package.xml  setup.py
gripper_control/gripper_control/: gripper_active_node.py  gripper_cmd_node.py  gripper_test_node.py  mode_hover.py  tasks_cmd_node.py
gripper_control/gripper_control/scripts/: teensy_python_interface.py
gripper_control/launch/: control_node.launch.py
image_saver/: package.xml  setup.py
image_saver/image_saver/: image_saver_node.py
line_follower_mode/: CMakeLists.txt  package.xml
mission_director/: CMakeLists.txt  package.xml  setup.py
mission_director/mission_director/: mission_director.py  mission_director_AHT.py  mission_director_node.py  mission_director_simple.py
offboard_handler/: CMakeLists.txt  package.xml
offboard_handler/include/: offboard_handler.hpp
offboard_handler/src/: offboard_handler.cpp
optitrack_timefix/: CMakeLists.txt  package.xml
optitrack_timefix/include/: optitrack_timefix.hpp
optitrack_timefix/src/: optitrack_timefix.cpp
px4_frame_transforms_lib/: CMakeLists.txt  package.xml
px4_frame_transforms_lib/include/px4_frame_transforms_lib/: frame_transforms.h
px4_frame_transforms_lib/src/lib/: frame_transforms.cpp
qgroundcontrol/: CMakeLists.txt
simulation/qgroundcontrol/: CMakeLists.txt
simulation/tucan_sim/: package.xml  setup.cfg  setup.py
simulation/tucan_sim/gz_config/: default.config
simulation/tucan_sim/launch/: gazebo.launch.sh  px4.launch.sh  simulation-gazebo.py  tucan_sim.launch.py
simulation/tucan_sim/worlds/: tucan.sdf
tucan_bringup/: CMakeLists.txt  package.xml
tucan_bringup/launch/: autonomous_hover_test.launch.py  camera_test.launch copy.py  camera_test.launch.py  cv_test.launch.py  example.launch.py  hover_test.launch.py  hover_test_sim.launch.py  main_bringup.launch.py  object_detect_test.launch.py  simple_exp.launch.py
tucan_msgs/: CMakeLists.txt  package.xml
tucan_msgs/msg/: ARMarker.msg  ARMarkerPosition.msg  GripperCommand.msg  GripperStatus.msg  LineFollower.msg  Mode.msg  ObjectDetection.msg  gripper_cmd.msg  servo_pwm.msg
tucan_simulation/: package.xml  setup.cfg  setup.py
tucan_simulation/gz_config/: default.config
tucan_simulation/launch/: gazebo.launch.sh  microxrce.launch.sh  px4.launch.sh  px4_sim.launch.py  px4_sim_simple.launch.py  simulation-gazebo.py
tucan_simulation/models/tucan/: model.config
tucan_simulation/worlds/: tucan (copy).sdf  tucan.sdf
vision/cv_aruco_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vision/cv_aruco_detector/cv_aruco_detector/: cv_aruco_detector.py
vision/cv_aruco_detector/utils/: calibration.json  camera_calibration.py
vision/cv_line_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vision/cv_line_detector/cv_line_detector/: cv_line_detector.py
vision/cv_object_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vision/cv_object_detector/cv_object_detector/: cv_object_detector.py
(+14 files in other folders)
